# sensor-api-rust

./: .env.example  Cargo.toml  Rocket.toml.example
migrations/2022-01-30-174452_create_sensors_table/: down.sql  up.sql
migrations/2022-01-30-174816_create_reading_table/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs
templates/: index.html.tera
