[package]
name = "reading_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.8", features=["postgres"]}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
tera = "1.15.0"
rocket_dyn_templates = {version = "0.1.0-rc.1", features=["tera"]}
rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features=false, features=["diesel_postgres_pool"]}